@@ -6,6 +6,7 @@
 #   11-Apr-2023 dwp  Fix issue with lineage tree building--handle cases with two parents at same depth;
 #                    Add treeNodeList building and exporting
 #   27-Apr-2023 dwp  Update tree node list generation
+#    2-May-2023 dwp  Remove depth field from lineage tree
 ##
 """
 Accessors for CARD ontologies.
@@ -166,33 +167,20 @@ class CARDTargetOntologyProvider:
             if parent != "ARO:1000001":  # Exclude the top-level "ARO:1000001"
                 childToParentD[child].append(parent)
 
-        # depthD = self.__createDepthDict(parentChildTupleList)
         treeNodeL = self.__exportTreeNodeList(childToParentD, idNameMapD)
 
         # create a dictionary to store the ancestors of each child
         lineageD = {}
         for child in childToParentD:
-            lineageD[child] = [{"id": child, "name": idNameMapD[child], "depth": 0}]  # Add the child to its own ancestry list
+            lineageD[child] = [{"id": child, "name": idNameMapD[child]}]  # Add the child to its own ancestry list
             stack = [child]
-            depth = -1
             while stack:
                 node = stack.pop()
                 if node in childToParentD:
                     for parent in childToParentD[node]:
                         if parent not in [d["id"] for d in lineageD[child]]:
-                            lineageD[child].append({"id": parent, "name": idNameMapD[parent], "depth": depth})
+                            lineageD[child].append({"id": parent, "name": idNameMapD[parent]})
                             stack.append(parent)
-                    depthLevels = set(i["depth"] for i in lineageD[child])
-                    depth = min(depthLevels) - 1
-            numDepthLevels = len(set(i["depth"] for i in lineageD[child]))
-            #
-            # Flip the depth numbering so that oldest ancestor has depth=1 and youngest/most-specific child has depth=n
-            nL = []
-            for aD in lineageD[child]:
-                aD["depth"] += numDepthLevels
-                nL.append(aD)
-            snL = sorted(nL, key=lambda x: x["depth"])  # List oldest/broadest ancestor first (depth=1), youngest/most-specific child last (depth=n)
-            lineageD[child] = snL
 
         return lineageD, treeNodeL
 
@@ -213,42 +201,3 @@ class CARDTargetOntologyProvider:
             dL.append(tD)
 
         return dL
-
-    # def __createDepthDict(self, parentChildTupleList):
-    #     # Create an adjacency list to represent the graph
-    #     graph = {}
-    #     for parent, child in parentChildTupleList:
-    #         if parent not in graph:
-    #             graph[parent] = set()
-    #         graph[parent].add(child)
-    #     #
-    #     # Initialize the depth dictionary and visited set
-    #     depthD = {}
-    #     visited = set()
-    #     #
-    #     # Define a helper function to traverse the graph
-    #     def traverse(node, depth, cycleNodes):
-    #         # If we have already visited this node, return
-    #         if node in visited:
-    #             return
-    #         #
-    #         # Add the node to the visited set
-    #         visited.add(node)
-    #         #
-    #         # Add the node to the depth dictionary
-    #         if node in depthD:
-    #             depthD[node].extend(cycleNodes + [depth])
-    #         else:
-    #             depthD[node] = cycleNodes + [depth]
-    #         #
-    #         # Traverse the children of the node
-    #         if node in graph:
-    #             for child in graph[node]:
-    #                 traverse(child, depth+1, cycleNodes)
-    #     #
-    #     # Traverse the graph from each node to handle cycles
-    #     for node in graph:
-    #         traverse(node, 0, [])
-    #     #
-    #     # Return the completed depth dictionary
-    #     return depthD
